# PmuSim

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_CN.md
.github/workflows/: release.yml
crates/pmusim-app/: Cargo.toml  tauri.conf.json
crates/pmusim-app/capabilities/: default.json
crates/pmusim-app/examples/: headless_smoke.rs  v2_master_repro.rs
crates/pmusim-app/src/: commands.rs  events.rs  lib.rs  main.rs  state.rs  update.rs
crates/pmusim-app/src/network/: master.rs  session.rs
crates/pmusim-app/tests/: e2e.rs
crates/pmusim-sub/: Cargo.toml  tauri.conf.json
crates/pmusim-sub/capabilities/: default.json
crates/pmusim-sub/icons/: icon.icns
crates/pmusim-sub/src/: commands.rs  datagen.rs  events.rs  lib.rs  main.rs  state.rs
crates/pmusim-sub/src/network/: mod.rs  substation.rs
crates/pmusim-sub/tests/: e2e.rs
docs/: TODO.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend-sub/: index.html  package-lock.json  package.json  vite.config.ts
frontend-sub/src/: App.vue  main.ts
frontend/src/: App.vue  main.ts
frontend/tests/: anomaly-panel.test.ts  anomaly.test.ts  config-info-panel.0hz.test.ts  config-info-panel.reconnect.test.ts  data-table-panel.test.ts  phasor-plot.test.ts  phasor.test.ts  rate.test.mjs  station-list-panel.test.ts  use-anomaly-log.test.ts  use-comm-log.test.ts  use-event-log.test.ts  use-frame-rate.test.ts  use-pmu-events.anomaly.test.ts  use-pmu-events.multi.test.ts  use-pmu-events.reconnect.test.ts  (+3 more)
scripts/: build-release-notes.mjs  gen-update-manifest.mjs  package.json
(+68 files in other folders)
