[package]
name = "pmusim-app"
version = "0.8.0"
edition = "2021"

[lib]
name = "pmusim_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
pmusim-core = { path = "../pmusim-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
