[package]
name = "pmusim-sub"
version = "0.5.0"
edition = "2021"

[lib]
name = "pmusim_sub"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
pmusim-core = { path = "../pmusim-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
pmusim-app = { path = "../pmusim-app" }
hex = "0.4"
